EXTRACT RELEVANT PAPERS WORKING WITH GEMINI API. ERROR WITH CLAUSE

--- a/documents/section3/processed/subsection_1/Point_1/01b9a362f878626db0ddcc2e5990e2aa9bf6e9dc37fb1ddeb5558516fee85f0a_processed.yaml
+++ b/documents/section3/processed/subsection_1/Point_1/01b9a362f878626db0ddcc2e5990e2aa9bf6e9dc37fb1ddeb5558516fee85f0a_processed.yaml
@@ -1,97 +1,38 @@
 - DOI: https://doi.org/10.3390/agronomy12081962
-  analysis: '**Relevance: How directly does the paper address the point within the
-    larger context and intent of the literature review intention?**
+  analysis: 'The speciﬁc details of the paper contribute to addressing the point within
+    the larger context and intent of the literature review. Consider the following
+    factors based on the paper type:
 
+    Relevance: How directly does the paper address the key issues pertaining to the
+    outline point? The paper addresses the key issues of the outline point with highly
+    insightful, reliable, and up-to-date information on IDSSs and their relevance
+    to irrigation management and the nexus with energy, water, N use efﬁciency and
+    salinity.
 
-    This paper directly addresses the point within the larger context and intent of
-    the literature review. The purpose of the literature review is to "identify, compile
-    and assess the available IDSS in California and how they may serve multiple water,
-    energy and nutrient management goals". This paper provides a comprehensive review
-    of existing IDSS available to California growers, their underlying science, incentive
-    policies and anticipated outcomes. It also discusses the challenges and opportunities
-    for the integration of IDSS for nexus benefits.
+    Insight: To what extent does the paper provide novel, meaningful, or valuable
+    information for the point? The paper provides novel, meaningful, and valuable
+    information for the point by offering a comprehensive review of IDSSs used in
+    California, their underlying science, incentive policies, and anticipated  outcomes.
+    It highlights the need for the integration of different strategies to improve
+    precision irrigation scheduling, uniform water and nutrient application, and the
+    soil–plant–water monitoring.
 
+    Credibility: How reliable, valid, and trustworthy are the paper''s ﬁndings, methods,
+    or arguments? The paper''s ﬁndings, methods, and arguments are reliable, valid,
+    and trustworthy as they are based on scientiﬁc research and evaluation, user feedback,
+    and inputs from advisory groups. The paper also emphasizes the importance of statistical
+    analysis and comparison for performance evaluation of IDSSs.
 
-    **Insight: To what extent does the paper provide novel, meaningful, or valuable
-    information for the point?**
+    Scope: How comprehensive is the paper''s coverage of topics relevant to the outline
+    point? The paper''s coverage of topics relevant to the outline point is comprehensive
+    as it covers IDSSs for crop water management, energy management, N management,
+    salinity management, irrigation system management, and evaluation and ongoing
+    work in California.
 
-
-    This paper provides novel, meaningful, and valuable information for the point.
-    It is the first comprehensive review of IDSS available to California growers.
-    It provides a detailed overview of the science, policy, and decision support for
-    irrigation and energy management, nitrogen management, and salinity management.
-    The paper also highlights the challenges and opportunities for the integration
-    of IDSS for nexus benefits. This information is valuable for growers, researchers,
-    and policymakers working to improve water, energy, and nutrient management in
-    California.
-
-
-    **Credibility: How reliable, valid, and trustworthy are the paper''s findings,
-    methods, or arguments?**
-
-
-    This paper is credible, valid, and trustworthy. The authors are experts in the
-    field of irrigation and water management. They have conducted a thorough review
-    of the literature and have presented their findings in a clear and concise manner.
-    The paper is well-referenced and the authors have provided evidence to support
-    their claims.
-
-
-    **Scope: How comprehensive is the paper''s coverage of topics relevant to the
-    outline point and review?**
-
-
-    This paper provides a comprehensive coverage of topics relevant to the outline
-    point and review. It covers the following topics:
-
-
-    * Science of IDSS
-
-    * Policy context for IDSS
-
-    * Decision support for irrigation and energy management
-
-    * Decision support for irrigation and nitrogen management
-
-    * Decision support for irrigation and salinity management
-
-    * Challenges and opportunities for the integration of IDSS for nexus benefits
-
-
-    The paper also provides a detailed overview of the available IDSS in California.
-    This information is valuable for growers, researchers, and policymakers working
-    to improve water, energy, and nutrient management in California.
-
-
-    **Recency: How up-to-date is the information in the context of the current state
-    of knowledge on the topic?**
-
-
-    This paper is up-to-date in the context of the current state of knowledge on the
-    topic. The authors have cited recent studies and have provided a comprehensive
-    overview of the latest developments in IDSS. The paper also discusses the challenges
-    and opportunities for the integration of IDSS for nexus benefits, which is a relatively
-    new area of research.
-
-
-    **Limitations:**
-
-
-    One limitation of this paper is that it does not provide a detailed evaluation
-    of the available IDSS in California. However, this is beyond the scope of the
-    paper. The authors have provided a comprehensive overview of the science, policy,
-    and decision support for IDSS, and they have highlighted the challenges and opportunities
-    for the integration of IDSS for nexus benefits. This information is valuable for
-    growers, researchers, and policymakers working to improve water, energy, and nutrient
-    management in California.
-
-
-    **Overall:**
-
-
-    This is a well-written and informative paper that provides a comprehensive overview
-    of IDSS in California. It is a valuable resource for growers, researchers, and
-    policymakers working to improve water, energy, and nutrient management in California.'
+    Recency: How up-to-date is the information in the context of the current state
+    of knowledge on the topic? The information in the paper is up-to-date in the context
+    of the current state of knowledge on the topic as it includes recent research,
+    policy initiatives, and advancements in IDSSs and their applications in California.'
   authors:
   - Gaurav Jha
   - Floyid Nicolas
@@ -102,7 +43,10 @@
   - Kate M. Scow
   - Mallika A. Nocco
   citation_count: 4
-  full_citation: '>'
+  full_citation: Jha, G.; Nicolas, F.; Schmidt, R.; Suvoˇcarev, K.; Diaz, D.; Kisekka,
+    I.; Scow, K.; Nocco, M.A. Irrigation Decision Support Systems (IDSS) for California’s
+    Water–Nutrient–Energy Nexus. Agronomy 2022, 12, 1962. https://doi.org/10.3390/
+    agronomy12081962
   full_text: ">\nCitation: Jha, G.; Nicolas, F.; Schmidt,\nR.; Suvoˇcarev, K.; Diaz,\
     \ D.; Kisekka,\nI.; Scow, K.; Nocco, M.A. Irrigation\nDecision Support Systems\
     \ (IDSS) for\nCalifornia’s Water–Nutrient–Energy\nNexus. Agronomy 2022, 12, 1962.\n\
@@ -1748,25 +1692,24 @@
     191. Datta, S.; Taghvaeian, S.; Ochsner, T.E.; Moriasi, D.; Gowda, P.; Steiner,\
     \ J.L. Performance Assessment of Five Different Soil\nMoisture Sensors under Irrigated\
     \ Field Conditions in Oklahoma. Sensors 2018, 18, 3786. [CrossRef] [PubMed]\n"
-  inline_citation: '>'
+  inline_citation: Jha et al. (2022)
   journal: Agronomy
-  limitations: One limitation of this paper is that it does not provide a detailed
-    evaluation of the available IDSS in California. However, this is beyond the scope
-    of the paper.
+  limitations: Although the paper provides a comprehensive review of IDSSs used in
+    California, it does not offer speciﬁc recommendations or guidelines for fully
+    addressing the point and outline, such as best practices for IDSS implementation
+    or speciﬁc strategies for integrating IDSSs for nexus beneﬁts.
   pdf_link: https://www.mdpi.com/2073-4395/12/8/1962/pdf?version=1661420444
   publication_year: 2022
-  relevance_score: 1.0
-  relevance_score1: 1.0
+  relevance_score: 0.9
+  relevance_score1: 0
   relevance_score2: 0
   title: Irrigation Decision Support Systems (IDSS) for California’s Water–Nutrient–Energy
     Nexus
-  verbatim_quote1: Irrigation decision support systems (IDSS) may greatly benefit
-    the >400 crops grown throughout the State of California to support diverse challenges,
-    including drought, energy, nitrogen and salinity management.
-  verbatim_quote2: Effective energy, water, nitrogen and salinity management in California
-    under regulatory policies, such as the Sustainable Groundwater Management Act,
-    require the integration of different strategies to improve precision irrigation
-    scheduling, uniform water and nutrient application, and the soil–plant–water monitoring.
-  verbatim_quote3: Most of the irrigation decision support tools used in California
-    are based on fewer components of the water budget, and none of the available IDSS
-    provide estimation of all parameters together.
+  verbatim_quote1: The statewide implementation of IDSS in California has gone through
+    a comprehensive search of all IDSS on the search engines and in consultation with
+    a California IDSS product advisory group.
+  verbatim_quote2: The California Energy Commission-sponsored Energy Product Evaluation
+    Hub (Cal-EPE Hub) project has a mission of providing science-based evaluation
+    of energy-saving technologies as a direct result of improved water management
+    for irrigation in agriculture, including current and future IDSS in California.
+  verbatim_quote3: '>'
