--- a/documents/section3/processed/subsection_1/Point_1/1e2377e936f79536fb2f075534c0025cfb8fc6246629188613a1fe0717835688_processed.yaml
+++ b/documents/section3/processed/subsection_1/Point_1/1e2377e936f79536fb2f075534c0025cfb8fc6246629188613a1fe0717835688_processed.yaml
@@ -1,13 +1,30 @@
 - DOI: https://doi.org/10.14569/ijacsa.2019.0100513
-  analysis: The paper analyzes academic research that addresses the relationship between
-    automated, real-time irrigation management systems and the efficiency of water
-    resource utilization and agricultural productivity. Importantly, the paper also
-    focuses on the potential for end-to-end, automated irrigation using IoT and machine
-    learning.
+  analysis: 'The paper mainly discusses the use of AI/IoT-based data collection for
+    use in technologies that support SSA (Smart, Sustainable Agriculture), but it
+    does not specifically address which types of data may be of greatest value to
+    specific aspects of SSA management.
+
+
+    **Relevance Score: 0.6-0.69**
+
+    The paper is moderately relevant because it discusses the Internet of Things (IoT)
+    and Artificial Intelligence (AI) in the context of farming/agriculture - but does
+    not specifically address data types that may be the most applicable or valuable
+    in irrigation management or other aspects of SSA.
+
+
+    **Limitations:**
+
+    - The paper does not specifically address what types of data might be most appropriate
+    or valuable for use in AI/IoT based SSA.
+
+    - It also does not mention any potential barriers or challenges to the broad implementation
+    of AI/IoT-based SSA frameworks.'
   authors:
   - Eissa Jaber Alreshidi
   citation_count: 72
-  full_citation: '>'
+  full_citation: Smart Sustainable Agriculture (SSA) Solution Underpinned by Internet
+    of Things (IoT) and Artificial Intelligence (AI)
   full_text: ">\n(IJACSA) International Journal of Advanced Computer Science and Applications,\
     \ \nVol. 10, No. 5, 2019 \n93 | P a g e  \nwww.ijacsa.thesai.org \nSmart Sustainable\
     \ Agriculture (SSA) Solution \nUnderpinned by Internet of Things (IoT) and \n\
@@ -719,56 +736,94 @@
     \ sustainable agriculture,\" Journal of Sensor Technology, \n2019. \n[62] L. Nóbrega,\
     \ P. Gonçalves, P. Pedreiras, and J. Pereira, \"An IoT-Based \nSolution for Intelligent\
     \ Farming,\" Sensors, vol. 19, no. 3, p. 603, 2019. \n \n \n"
-  inline_citation: '>'
+  inline_citation: null
   journal: International Journal of Advanced Computer Science and Applications
-  limitations: null
+  limitations: '- The paper does not specifically address what types of data might
+    be most appropriate or valuable for use in AI/IoT based SSA.
+
+    - It also does not mention any potential barriers or challenges to the broad implementation
+    of AI/IoT-based SSA frameworks.'
   pdf_link: http://thesai.org/Downloads/Volume10No5/Paper_13-Smart_Sustainable_Agriculture.pdf
   publication_year: 2019
-  relevance_score: 0.9
-  relevance_score1: 0.9
+  relevance_score: 0.65
+  relevance_score1: 0
   relevance_score2: 0
   title: Smart Sustainable Agriculture (SSA) Solution Underpinned by Internet of Things
     (IoT) and Artificial Intelligence (AI)
-  verbatim_quote1: '“Addressing the global food challenge: The review aims to explore
-    how automated, real-time irrigation management systems can contribute to the efficient
-    use of water resources and enhance agricultural productivity to meet the growing
-    demand for food.”'
-  verbatim_quote2: '“Evaluating the current state and future potential: The primary
-    objective is to critically assess the current state of end-to-end automated irrigation
-    management systems that integrate IoT and machine learning technologies.”'
-  verbatim_quote3: '“Highlighting the role of interoperability and standardization:
-    The review seeks to emphasize the importance of interoperability and standardization
-    in enabling the integration of components within the automated irrigation management
-    pipeline.”'
+  verbatim_quote1: null
+  verbatim_quote2: null
+  verbatim_quote3: '>'
 - DOI: https://doi.org/10.3389/fpls.2023.1239594
-  analysis: 'The paper defines 3 types of most applicable data to irrigation management
-    and their typical sources:
+  analysis: '**Relevance to the point**
 
 
-    1. Soil moisture content, which is typically measured in situ using soil moisture
-    sensors, or remotely using a variety of technologies such as in-ground probes,
-    remote sensing, and aerial imagery.
-
-    2. Weather data, which provide information about the climatic conditions that
-    affect irrigation requirements, and can be obtained from weather stations, meteorological
-    satellites, and numerical weather prediction models.
-
-    3. Plant data, which provide information about the water status and growth stage
-    of the crop, and can be obtained using a range of sensors such as leaf water potential
-    sensors, chlorophyll meters, and thermal imaging cameras.
+    The paper provides a comprehensive overview of the current state and future potential
+    of real-time, automated irrigation management systems for precision agriculture.
+    It specifically addresses the challenges and opportunities associated with implementing
+    these systems, including data collection, transmission protocols, and the need
+    for interoperability and standardization. The paper also highlights the role of
+    next-generation wireless communication technologies, such as 5G and IoT, in enabling
+    the realization of these systems.
 
 
-    The paper goes on to discuss the importance of interoperability and standardization
-    in enabling the integration of components within the automated irrigation management
-    pipeline. It provides an overview of the current state and future potential of
-    real-time, end-to-end automated irrigation management systems, focusing on the
-    initial stages of the pipeline, covering data collection, edge and fog computing,
-    real-time data transmission protocols and technologies, and the challenges and
-    solutions associated with real-time data transmission. Although the paper does
-    not focus directly on addressing the point concerning the types of data most applicable
-    to irrigation management and their typical sources, it provides a comprehensive
-    overview of the field of automated irrigation management systems and the challenges
-    and opportunities associated with real-time data transmission.'
+    The paper''s findings have implications for the design and deployment of real-time,
+    automated irrigation management systems, as well as for the development of related
+    policies and regulations. In particular, the paper''s emphasis on the need for
+    interoperability and standardization highlights the importance of promoting collaboration
+    and coordination among stakeholders in the agricultural sector. Additionally,
+    the paper''s discussion of the role of 5G and IoT technologies provides valuable
+    insights into the future direction of this field.
+
+
+    **Insight**
+
+
+    The paper provides several novel insights into the challenges and opportunities
+    associated with implementing real-time, automated irrigation management systems
+    for precision agriculture. First, the paper highlights the need for a comprehensive
+    approach to data collection and transmission. This includes not only the development
+    of appropriate sensors and communication protocols but also the establishment
+    of a robust data management infrastructure. Second, the paper emphasizes the importance
+    of interoperability and standardization. This will be essential for ensuring that
+    different systems can be easily integrated and operated together. Third, the paper
+    discusses the role of next-generation wireless communication technologies, such
+    as 5G and IoT, in enabling the realization of these systems. These technologies
+    will provide the necessary bandwidth and connectivity to support the real-time
+    data transmission and processing required for precision agriculture.
+
+
+    **Credibility**
+
+
+    The paper is well-written and provides a comprehensive overview of the current
+    state and future potential of real-time, automated irrigation management systems
+    for precision agriculture. The authors have cited a wide range of sources to support
+    their claims, and the paper is well-organized and easy to follow. However, the
+    paper does not provide any specific examples of real-world deployments of these
+    systems. This would have been a valuable addition to the paper and would have
+    helped to demonstrate the feasibility and benefits of these systems.
+
+
+    **Scope**
+
+
+    The paper provides a comprehensive overview of the current state and future potential
+    of real-time, automated irrigation management systems for precision agriculture.
+    However, the paper does not cover all aspects of this topic. For example, the
+    paper does not discuss the economic costs and benefits of these systems or the
+    potential environmental impacts. Additionally, the paper does not provide any
+    specific examples of real-world deployments of these systems.
+
+
+    **Recency**
+
+
+    The paper is up-to-date and cites a wide range of sources to support its claims.
+    The authors have also included a discussion of the latest developments in this
+    field, such as the role of 5G and IoT technologies. However, the paper does not
+    include any specific examples of real-world deployments of these systems. This
+    would have been a valuable addition to the paper and would have helped to demonstrate
+    the feasibility and benefits of these systems.'
   authors:
   - Debabrata Singh
   - Anil Kumar Biswal
@@ -1731,25 +1786,31 @@
     \ Science\nfrontiersin.org\n17\n"
   inline_citation: '>'
   journal: Frontiers in Plant Science
-  limitations: The paper does not provide a detailed discussion of the specific data
-    types used in irrigation management, or their typical sources. It focuses primarily
-    on the challenges and opportunities associated with real-time data transmission
-    in automated irrigation management systems. Additionally, the paper does not provide
-    any examples of how the proposed system has been implemented or evaluated in real-world
-    settings.
+  limitations: '>'
   pdf_link: https://www.frontiersin.org/articles/10.3389/fpls.2023.1239594/pdf
   publication_year: 2023
-  relevance_score: 0.85
-  relevance_score1: 0.85
+  relevance_score: 0.7
+  relevance_score1: 0
   relevance_score2: 0
   title: 'Smart high-yield tomato cultivation: precision irrigation system using the
     Internet of Things'
-  verbatim_quote1: Soil moisture content, which is typically measured in situ using
-    soil moisture sensors, or remotely using a variety of technologies such as in-ground
-    probes, remote sensing, and aerial imagery.
-  verbatim_quote2: Weather data, which provide information about the climatic conditions
-    that affect irrigation requirements, and can be obtained from weather stations,
-    meteorological satellites, and numerical weather prediction models.
-  verbatim_quote3: Plant data, which provide information about the water status and
-    growth stage of the crop, and can be obtained using a range of sensors such as
-    leaf water potential sensors, chlorophyll meters, and thermal imaging cameras.
+  verbatim_quote1: '"The Internet of Things (IOT)-based smart farming promises ultrafast
+    speeds and near
+
+    real-time response. Precision farming enabled by the Internet of Things has the
+
+    potential to boost efﬁciency and output while reducing water use. Therefore, IoT
+
+    devices can aid farmers in keeping track crop health and development while also
+
+    automating a variety of tasks (such as moisture level prediction, irrigation system,
+
+    crop development, and nutrient levels)."'
+  verbatim_quote2: '"Sensors are commonly used in the crop ﬁeld. There are more chances
+    for damaged
+
+    sensors, which needs to be addressed by making a smart device that is robust and
+    easy to
+
+    sustain. Otherwise, it needs to be replaced with another sensor."'
+  verbatim_quote3: '>'
