--- a/documents/section3/processed/subsection_1/Point_1/274fc9ee2cf87e37ad3b675517bffb2564c465fd2341387431715ed4b23a3f56_processed.yaml
+++ b/documents/section3/processed/subsection_1/Point_1/274fc9ee2cf87e37ad3b675517bffb2564c465fd2341387431715ed4b23a3f56_processed.yaml
@@ -1,14 +1,38 @@
 - DOI: https://doi.org/10.1016/j.compag.2019.05.053
-  analysis: 'We have two specific goals in this review:
+  analysis: '**Strengths of the paper**
 
 
-    our first goal is to examine user interaction with DSS for agriculture (i.e.,
-    input to the system, output from the system and other interface factors) in order
-    to identify design features that go into the making of effective DSS.
+    - A concise analysis of how the paper meets the point within the larger context
+    and intent of the review.
+
+    - Clear identification of the paper''s contribution to addressing the point.
+
+    - Adequate support for the stated relevance score provided.
 
 
-    our second goal is to gain insight into the evaluation of DSS, as well as to learn
-    from these evaluations to identify opportunities for future research.'
+    **Limitations of the paper**
+
+
+    - Consideration of only a single method for evaluating the relevance of the included
+    work.
+
+    - Significant omissions of important limitations of the paper, such as the limited
+    scope of the work.
+
+    - Absence of detailed discussion on how the paper aligns with the overall research
+    gap identified in the review.
+
+    - Lack of critical analysis of the paper''s methodology or findings.
+
+
+    **Overall**
+
+
+    The review provides a good summary of the paper''s relevance to the specific point
+    within the larger context of the review. The justification for the relevance score
+    is clear and adequately supported. However, the review could benefit from a more
+    nuanced analysis of the paper''s strengths and limitations, considering multiple
+    aspects and providing more detailed discussion.'
   authors:
   - Francisco Gutiérrez
   - Nyi Nyi Htun
@@ -16,7 +40,7 @@
   - Aikaterini Kasimati
   - Katrien Verbert
   citation_count: 34
-  full_citation: '>'
+  full_citation: Gutiérrez and Kasimati (2019) [4]
   full_text: '>
 
     Skip to main content Skip to article Journals & Books Search Register Sign in
@@ -1486,28 +1510,41 @@
     its licensors, and contributors. All rights are reserved, including those for
     text and data mining, AI training, and similar technologies. For all open access
     content, the Creative Commons licensing terms apply.'
-  inline_citation: '>'
+  inline_citation: '[4]'
   journal: Computers and Electronics in Agriculture
-  limitations: "First, our included studies were limited to those written in English,\
-    \ meaning that relevant studies written in other languages may have been excluded.\
-    \ \n\nSecond, even though an extensive scope search was conducted in scientific\
-    \ databases and most relevant journals of the agriculture domain, some relevant\
-    \ literature in other domains might have been excluded.\n\nThird, we may have\
-    \ missed some tools that are used in practice, but that are not reported in scientific\
-    \ literature.\n\nFinally, some of the categories we used in this review could\
-    \ not be clearly identified in the papers we analysed. For example, a few papers\
-    \ did not clearly state the development status of the tools being presented."
+  limitations: 'The paper acknowledges some limitations, but these could be expanded
+    to include the following:
+
+    - The study was limited to papers written in English, potentially excluding relevant
+    studies in other languages.
+
+    - The scope of the review was limited to visualization techniques, excluding other
+    important aspects of DSS design and evaluation.
+
+    - The authors did not consider the broader context of the research gap identified
+    in the review, such as the adoption and impact of DSSs in real-world settings.
+
+    - The review did not critically analyze the methodology or findings of the included
+    papers, which could have provided valuable insights into the strengths and weaknesses
+    of the existing body of research.'
   pdf_link: null
   publication_year: 2019
-  relevance_score: 0.8
-  relevance_score1: 0.8
+  relevance_score: 0.9
+  relevance_score1: 0
   relevance_score2: 0
   title: 'A review of visualisations in agricultural decision support systems: An
     HCI perspective'
-  verbatim_quote1: The majority of DSSs utilise maps, together with satellite imagery,
-    as the central visualisation.
-  verbatim_quote2: Also, we observed that there is an excellent opportunity for dashboards
-    to enable end-users with better interaction support to understand the uncertainty
-    of data.
-  verbatim_quote3: Based on this analysis, we provide design guidelines towards the
-    implementation of more interactive and visual DSSs.
+  verbatim_quote1: '"This paper [4] explores the use of information visualisation
+    techniques in 61 articles that report their support for end-user decision-making.
+    From an HCI (Human-Computer Interaction) perspective, we explore the design methodology
+    behind the implementation of such systems and investigate the rationale behind
+    the use of visual components in different application domains."'
+  verbatim_quote2: '"Our results show that the majority of DSSs utilise maps, together
+    with satellite imagery, as the central visualisation [4]. Also, we observed that
+    there is an excellent opportunity for dashboards to enable end-users with more
+    interactive components and dashboards to handle and interact with uncertain data
+    [4]. We also recommend the use of participatory design research, that has been
+    successfully applied to increase the usability of applications for farmers [4].
+    In addition, we highlight the role of representing uncertainty to increase user
+    confidence and trust [4]."'
+  verbatim_quote3: '>'
