--- a/documents/section3/processed/subsection_1/Point_1/279414bb602d728455e07463f8a608229bd563601874b34793ab70ea0d015734_processed.yaml
+++ b/documents/section3/processed/subsection_1/Point_1/279414bb602d728455e07463f8a608229bd563601874b34793ab70ea0d015734_processed.yaml
@@ -1,20 +1,37 @@
 - DOI: https://doi.org/10.3390/agronomy12010127
-  analysis: "The paper provides a thorough analysis of the current state and future\
-    \ potential of real-time, automated irrigation management systems, with a particular\
-    \ focus on their relevance to the task of monitoring and controlling irrigation\
-    \ water in the context of smart agriculture.\n\nIt highlights the need for such\
-    \ systems in addressing the challenges of increasing population and food demand,\
-    \ climate change, and water scarcity. The paper reviews various IoT-based solutions\
-    \ for irrigation management, including data collection and transmission, data\
-    \ processing and analysis, decision-making, and automated actions. \n\nThe paper\
-    \ discusses the benefits of IoT-based irrigation management systems, such as improved\
-    \ water use efficiency, increased crop yield, and reduced operating costs. It\
-    \ also identifies challenges and limitations of existing systems, including cost,\
-    \ reliability, and scalability, as well as the need for further research and development\
-    \ in these areas.\n\nOverall, the paper provides a valuable overview of the state\
-    \ of the art in IoT-based irrigation management systems and highlights the need\
-    \ for further advancements to fully realize their potential in addressing the\
-    \ challenges of smart agriculture."
+  analysis: "This paper provides an overview of the applications of IoT technologies\
+    \ in smart agriculture, including soil moisture and water level monitoring, irrigation\
+    \ system monitoring, fertilizer administration, crop diseases and pest control,\
+    \ yield monitoring, forecasting and harvesting, and climate condition monitoring.\
+    \ It also highlights the use of various equipment and technologies in smart agriculture,\
+    \ such as sensors, agricultural drones, and harvesting robots. The paper identifies\
+    \ open issues and key challenges in smart agriculture, including durability and\
+    \ cost of sensors, energy requirements, connectivity issues, and data security\
+    \ and privacy concerns.\n\nThe paper contributes to the existing literature by\
+    \ presenting a comprehensive review of the state-of-the-art in IoT-based smart\
+    \ agriculture systems. It provides a detailed analysis of the benefits and limitations\
+    \ of different approaches and technologies, and highlights the potential for IoT\
+    \ to revolutionize agricultural practices.\n\nIn terms of relevance to the point\
+    \ mentioned in the <point_content>, the paper provides a comprehensive overview\
+    \ of IoT-based smart agriculture systems, including the use of sensors, drones,\
+    \ and harvesting robots, which are all relevant to types of data most applicable\
+    \ to irrigation management and their typical sources. However, the paper does\
+    \ not provide a detailed discussion of the specific data requirements for irrigation\
+    \ management or the challenges associated with collecting and processing this\
+    \ data.\n\nThe paper provides several verbatim quotes that are relevant to the\
+    \ point mentioned in the <point_content>: \n\n *“Precision farming, animal monitoring,\
+    \ and greenhouse monitoring are a few agri-cultural businesses utilizing the Internet\
+    \ of Things.”\n\n *“Numerous experts have worked diligently to create an alternative\
+    \ to irrigated farming. These efforts, however, have not yet resulted in a feasible\
+    \ solution to the irrigation system’s present problems.”\n\n *“At the moment,\
+    \ crop irrigation is carried out manually and by established customary practices.\
+    \ When crops are given less water, they grow slower and absorb less calcium. Frequent\
+    \ irrigation kills roots and wastes water. As a result, accurate irrigation of\
+    \ crops becomes a considerable difﬁculty.”\n\nOverall, the paper provides a comprehensive\
+    \ overview of the current state of IoT-based smart agriculture systems and their\
+    \ potential benefits for irrigation management. However, it does not provide a\
+    \ detailed discussion of the specific data requirements for irrigation management\
+    \ or the challenges associated with collecting and processing this data."
   authors:
   - Amjad Rehman
   - Tanzila Saba
@@ -23,7 +40,8 @@
   - Saeed Ali Bahaj
   - Huma Choudhary
   citation_count: 88
-  full_citation: '>'
+  full_citation: A Revisit of Internet of Things Technologies for Monitoring and Control
+    Strategies in Smart Agriculture
   full_text: ">\n\x01\x02\x03\x01\x04\x05\x06\a\b\x01\n\x01\x02\x03\x04\x05\x06\a\n\
     Citation: Rehman, A.; Saba, T.;\nKashif, M.; Fati, S.M.; Bahaj, S.A.;\nChaudhry,\
     \ H. A Revisit of Internet of\nThings Technologies for Monitoring\nand Control\
@@ -951,19 +969,23 @@
     \ of Robotic Things in Smart Domains: Applications and Challenges. Sensors\n2020,\
     \ 20, 3355. [CrossRef] [PubMed]\n56.\nSangeetha, S.K.B. Comparison of Crop Disease\
     \ Detection Methods-An intensive analysis. Psychol. Educ. J. 2021, 58, 10540–10546.\n"
-  inline_citation: '>'
+  inline_citation: Rehman, A.; Saba, T.; Kashif, M.; Fati, S.M.; Bahaj, S.A.; Chaudhry,
+    H. A Revisit of Internet of Things Technologies for Monitoring and Control Strategies
+    in Smart Agriculture. Agronomy 2022, 12, 127.
   journal: Agronomy
-  limitations: The paper does not provide specific examples or case studies of real-world
-    implementations of IoT-based irrigation management systems. It also does not provide
-    a detailed analysis of the technical challenges and limitations of such systems,
-    such as security, scalability, and reliability.
+  limitations: The paper does not provide a detailed discussion of the specific data
+    requirements for irrigation management or the challenges associated with collecting
+    and processing this data.
   pdf_link: https://www.mdpi.com/2073-4395/12/1/127/pdf?version=1642508054
   publication_year: 2022
-  relevance_score: 0.7928427124746191
-  relevance_score1: 0.7928427124746191
+  relevance_score: 0.7000000000000001
+  relevance_score1: 0
   relevance_score2: 0
   title: A Revisit of Internet of Things Technologies for Monitoring and Control Strategies
     in Smart Agriculture
-  verbatim_quote1: null
-  verbatim_quote2: null
-  verbatim_quote3: null
+  verbatim_quote1: Precision farming, animal monitoring, and greenhouse monitoring
+    are a few agri-cultural businesses utilizing the Internet of Things.
+  verbatim_quote2: Numerous experts have worked diligently to create an alternative
+    to irrigated farming. These efforts, however, have not yet resulted in a feasible
+    solution to the irrigation system’s present problems.
+  verbatim_quote3: '>'
