--- a/documents/section3/processed/subsection_1/Point_1/227331e54f8bb73cea7874c38a47b086ea97ae69f0a3ad98084d0dc696f9c436_processed.yaml
+++ b/documents/section3/processed/subsection_1/Point_1/227331e54f8bb73cea7874c38a47b086ea97ae69f0a3ad98084d0dc696f9c436_processed.yaml
@@ -1,27 +1,30 @@
-- analysis: 'The paper "Spatiotemporal Data Compression on IoT Devices in Smart Irrigation
-    System" discusses the application of an energy-efficient CORDIC-based compression
-    algorithm for data compression in a smart irrigation system. The authors highlight
-    the spatiotemporal properties of data collected from sensors in the irrigation
-    system and demonstrate how these properties can be exploited for compression.
-    The results show that the proposed algorithm can achieve high compression ratios
-    while maintaining data accuracy, which is crucial for decision-making in the irrigation
-    system.
+- analysis: 'The paper discusses data compression techniques for IoT devices, particularly
+    in the context of smart irrigation systems. It presents an energy-efficient CORDIC-based
+    (Coordinate Rotation DIgital Computer) algorithm to compress spatiotemporal data
+    collected from environmental sensors. The authors demonstrate the efficacy of
+    their algorithm by comparing its energy consumption and accuracy to other CORDIC
+    architectures and evaluating the quality of reconstructed data for decision-making.
+    Their findings suggest that the CORDIC-based algorithm can compress data with
+    minimal error while conserving energy, offering potential benefits for resource-constrained
+    IoT devices in precision agriculture applications.
 
 
-    In the context of the literature review''s point on "Types of data most applicable
-    to irrigation management and their typical sources", this paper provides a specific
-    example of how spatiotemporal data, such as temperature, humidity, and soil moisture,
-    can be collected from sensors in an irrigation system and compressed using appropriate
-    algorithms. This compressed data can then be used for decision-making, such as
-    determining when and how much to irrigate.
+    **Verbatim quote 1:** "Results obtained infer that compression is achieved at
+    the cost of infinitesimal error in the reconstructed values. It is also free from
+    outliers. As a result, the final decision outcome based on the reconstructed data
+    is not compromised."
 
 
-    The paper''s relevance to the review''s intention of "Data collection to cloud:
-    Automation and real-time processing" is limited, as it primarily focuses on the
-    compression of data collected from sensors rather than the real-time transmission
-    or processing of data. However, the paper does briefly mention that the compressed
-    data is sent to the cloud for further processing, indicating that it is part of
-    a larger data management and processing pipeline.'
+    **Verbatim quote 2:** "The CORDIC algorithm used in our irrigation system outperforms
+    existing basic, scale-free, and look ahead algorithms."
+
+
+    **Verbatim quote 3:** "This algorithm is not just specific to smart irrigation
+    system, but can also it can be applied in any domain where enormous data are generated
+    by the sensor."
+
+
+    **Relevance score:** 0.75'
   authors:
   - Nawandar N.K.
   - Satpute V.R.
@@ -43,7 +46,9 @@
     ill effect on the data. Further, the energy efficacy of the work is compared,
     and it is found to be on an average ∼47% efficient against the compared algorithms.
   doi: 10.1007/978-981-19-1520-8_66
-  full_citation: '>'
+  full_citation: Nawandar, N. K., & Satpute, V. R. (2018). Spatiotemporal Data Compression
+    on IoT Devices in Smart Irrigation System. In Pattern Recognition and Data Analysis
+    with Applications (pp. 819–831). Springer Nature Singapore Pte Ltd.
   full_text: '>
 
     "Your privacy, your choice We use essential cookies to make sure the site can
@@ -382,17 +387,22 @@
     cookies Your US state privacy rights Accessibility statement Terms and conditions
     Privacy policy Help and support 129.93.161.222 Big Ten Academic Alliance (BTAA)
     (3000133814) - University of Nebraska-Lincoln (3000134173) © 2024 Springer Nature"'
-  inline_citation: '>'
+  inline_citation: (Nawandar & Satpute, 2018)
   journal: Lecture Notes in Electrical Engineering
-  limitations: null
-  relevance_score: 0.69
-  relevance_score1: 0.69
+  limitations: The paper focuses on the energy efficiency and accuracy of the CORDIC-based
+    data compression algorithm, but it does not provide details on other aspects of
+    the IoT device, such as network connectivity, security, or scalability. Additionally,
+    while the authors mention the application of their algorithm to smart irrigation
+    systems, they do not provide specific examples or case studies to demonstrate
+    its practical implementation in real-world scenarios.
+  relevance_score: 0.75
+  relevance_score1: 0
   relevance_score2: 0
   title: Spatiotemporal Data Compression on IoT Devices in Smart Irrigation System
-  verbatim_quote1: '"The IoT is an umbrella domain with enormously prolific applications
-    like smart homes, waste management, agriculture, and retail. A huge amount of
-    data is generated by these applications."'
-  verbatim_quote2: '"The reconstructed data are obtained post-compression and decompression
-    and are used for decision-making. It provides 100% accuracy, and compression has
-    no ill effect on the data."'
-  verbatim_quote3: null
+  verbatim_quote1: '"Results obtained infer that compression is achieved at the cost
+    of infinitesimal error in the reconstructed values. It is also free from outliers.
+    As a result, the final decision outcome based on the reconstructed data is not
+    compromised."'
+  verbatim_quote2: '"The CORDIC algorithm used in our irrigation system outperforms
+    existing basic, scale-free, and look ahead algorithms."'
+  verbatim_quote3: '>'
